[package]
name = "alpaca"
version = "0.11.1"
authors = ["RollenRegistratorBot <rollenseb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
futures = "0.3"
rust_decimal = "1.14"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tokio = {version = "1.0", default-features = false, features = ["net"], optional = true}
tokio-tungstenite = {version = "0.15", features = ["stream", "rustls-tls"], optional = true}
tracing = "0.1"
uuid = {version = "0.8", features = ["serde", "v4"]}
vila = {version = "3.0", optional = true}

[dev-dependencies]
futures-channel = "0.3"
mockito = "0.30"
tokio = {version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"]}

[features]
default = ["rest", "ws"]
rest = ["vila"]
ws = ["tokio-tungstenite", "tokio/net"]
